--- a/style.css
+++ b/style.css
@@ -166,33 +166,50 @@ section {
   color: var(--cor5);
 }
 
-.table-container {
-  width: 100%;
-  max-width: 800px;
-  padding: 20px;
-  border-radius: 8px;
+.container-table {
+  width: 90%;
+  height: 100%;
+  margin: auto;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-  table-layout: auto;
-}
-
+.container-table table,
 th,
-td {
-  padding: 12px;
-  text-align: left;
+tr > tr > td {
   border: 1px solid var(--cor4);
+  border-collapse: collapse;
 }
 
-th {
-  background-color: var(--cor3);
+.container-table table {
+  width: 100%;
 }
 
-@media (max-width: 768px) {
-  th,
-  td {
-    padding: 8px;
-  }
+.container-table table thead {
+  text-align: center;
+}
+
+.container-table table thead th {
+  width: 100px;
+  height: 40px;
+  border-bottom: 1px solid var(--cor2);
+}
+
+.container-table table tbody {
+  text-align: center;
+}
+
+.container-table table tbody tr {
+  width: 100px;
+  height: 40px;
+}
+
+.container-table table tbody tr:nth-child(2n) {
+  background-color: var(--cor2);
+}
+
+.container-table table tbody tr:hover > td {
+  background-color: var(--cor5);
+  color: var(--cor3);
+  font-weight: 700;
 }
