--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* AQUI TEMOS AS ESTILIZAÇÕES RAIZES DO PROJETO, CORES, FONTES, RESET DA PÁGINA E ESTILOS BÁSICOS */
 
 :root {
+  --fundo: #3d3d3d;
   --cor1: #4caf50;
   --cor2: #2c3e50;
   --cor3: #f4f4f9;
@@ -12,11 +13,12 @@
 * {
   margin: 0px;
   padding: 0px;
+  box-sizing: border-box;
 }
 
 html,
 body {
-  background-color: var(--cor3);
+  background-color: var(--fundo);
   font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden;
 }
@@ -104,31 +106,6 @@ main p {
   background-color: var(--cor5);
   border-radius: 15px;
   text-align: justify;
-}
-
-aside ul {
-  text-align: center;
-  list-style-type: none;
-  padding: 87px;
-  margin: 0;
-}
-
-aside ul li {
-  padding: 8px;
-  color: var(--cor4);
-  font-size: 1.2em;
-  padding-bottom: 20px;
-}
-
-aside ul li a {
-  text-decoration: none;
-  font-weight: bold;
-  color: var(--cor1);
-  transition: color 0.3s ease-in-out;
-}
-
-aside ul li a:hover {
-  color: var(--cor5);
 }
 
 footer {
@@ -247,6 +224,67 @@ tr > tr > td {
   flex-wrap: wrap; /* Permite quebrar linha se necessário */
   gap: 16px; /* Espaço entre os itens */
   justify-content: center; /* Centraliza os itens */
+}
+
+/* estilização dos cards que contem os projetos*/
+.container-pj {
+  max-width: 1000px;
+  margin: 20px auto;
+  padding: 20px;
+  background: var(--cor2);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  margin-top: 150px; /*distancia*/
+  margin-bottom: 150px; /*distancia*/
+}
+
+.container-pj > h2 {
+  color: var(--cor1);
+  font-size: 1.5em;
+  font-family: var(--font_titulo);
+}
+
+.projetos {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  padding: 20px;
+}
+
+.projeto {
+  background: var(--cor4);
+  padding: 15px;
+  border-radius: 8px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+
+.projeto:hover {
+  transform: scale(1.05);
+}
+.projeto img {
+  width: 100%;
+  border-radius: 8px;
+}
+.projeto h3 {
+  margin: 10px 0;
+  color: var(--cor1);
+  font-family: var(--font_titulo);
+  font-size: 1.5em;
+}
+
+.projeto a {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 8px 15px;
+  background: var(--cor2);
+  color: var(--cor1);
+  text-decoration: none;
+  border-radius: 5px;
+  font-family: var(--font_titulo);
+}
+.projeto a:hover {
+  background: var(--cor5);
 }
 
 /* AQUI FICA A ESTILIZAÇÃO DA DIV QUE CONTEM OS CARDS DAS TECNOLOGIAS QUE TRABALHO, REFEFENTE A PAGINA HOME DO PROETO */
