--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -1,9 +1,9 @@
 footer {
-    background-color: var(--cor5);
-    color: white;
-    text-align: center;
-    font-size: 0.8em;
-    padding: 5px;
-    width: 100%;
-    color: var(--cor4);
-  }
+  background-color: var(--cor06);
+  color: var(--cor04);
+  font-family: var(--font_titulo);
+  text-align: center;
+  font-size: 0.8em;
+  padding: 5px;
+  width: 100%;
+}
