--- a/src/style/header.css
+++ b/src/style/header.css
@@ -37,13 +37,14 @@ header h2 {
 
 nav {
   text-align: center;
-  background-color: var(--cor2);
+  background-color: var(--cor02);
   padding: 20px;
   box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.116);
 }
 
 nav > a {
-  color: var(--cor1);
+  color: var(--cor06);
+  font-family: var(--font_titulo);
   padding: 10px;
   border-radius: 5px;
   text-decoration: none;
@@ -52,5 +53,6 @@ nav > a {
 }
 
 nav > a:hover {
-  background-color: var(--cor5);
+  background-color: var(--cor05);
+  border-radius: 15px;
 }
