--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -1,13 +1,14 @@
-
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-  }
-  
-  html,
-  body {
-    background-color: var(--fundo);
-    font-family: Arial, Helvetica, sans-serif;
-    overflow-x: hidden;
-  }
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  background-color: var(--cor02);
+  font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+  width: 100%;
+  color: var(--cor04);
+}
