--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -1,7 +1,9 @@
+@import url(variable.css);
+
 footer {
   background-color: var(--cor06);
   color: var(--cor04);
-  font-family: var(--font_titulo);
+  font-family: var(--font_texto);
   text-align: center;
   font-size: 0.8em;
   padding: 5px;
